# apriltag_wrapper

./: .gitignore  AprilTagWrapper.cpp  AprilTagWrapper.h  CMakeLists.txt  tag36h9.c  tag36h9.h
example/: CMakeLists.txt  apriltag_demo.c
example/src/: test_wrapper.cpp
